# OmokGosu

./: .clang-format  .dockerignore  .editorconfig  .gitignore  CMakeLists.txt  Dockerfile  README.md  fly.toml  pyproject.toml
.github/workflows/: stats.yml
cpp/: CMakeLists.txt
cpp/bindings/: pybind_module.cpp
cpp/include/omok/: board.hpp  eval.hpp  movegen.hpp  pattern.hpp  rules.hpp  search.hpp  types.hpp  vcf.hpp  zobrist.hpp
cpp/src/: board.cpp  eval.cpp  movegen.cpp  pattern.cpp  rules.cpp  search.cpp  vcf.cpp  zobrist.cpp
cpp/tests/: test_board.cpp  test_pattern.cpp  test_rules.cpp  test_search.cpp  test_vcf.cpp
cpp/tests/fixtures/: forbidden_positions.json
docs/: AI.md  ARCHITECTURE.md  DEPLOY_CLOUD.md  DEPLOY_ELECTRON.md  PLAN.md  PROGRESS.md  ROADMAP.md  RULES.md  VERSIONING.md
electron/: main.cjs  package-lock.json  package.json  preload.cjs
electron/assets/: README.md
scripts/: _vsenv.ps1  bootstrap.ps1  build_core.ps1  build_electron.ps1  build_release.ps1  build_stats_report.py  dev.ps1  rebuild_core.ps1  sync_version.ps1  test.ps1
server/: pyproject.toml
server/omok_server/: __init__.py  main.py  schemas.py  static.py  version.py
server/omok_server/ai/: base.py  heuristic_ai.py  minimax_ai.py  random_ai.py  smart_ai.py
server/omok_server/api/: admin.py  auth.py  bug_reports.py  chat.py  downloads.py  games.py  matches.py  rooms.py  system.py  users.py  ws.py  ws_lobby.py  ws_rooms.py
server/omok_server/auth/: __init__.py  deps.py  security.py  username_rules.py
server/omok_server/db/: __init__.py  engine.py  models.py
server/omok_server/game/: clock.py  engine.py  manager.py  room.py  room_manager.py  session.py
server/omok_server/middleware/: version_gate.py
server/omok_server/services/: __init__.py  chat_filter.py  github_issues.py  lobby_chat_store.py  operators.py  session_log.py  stats.py  usage_stats.py
server/omok_server/ws/: registry.py
server/tests/: conftest.py  test_api.py  test_auth.py  test_bug_reports.py  test_chat.py  test_chat_filter.py  test_clock.py  test_downloads.py  test_engine.py  test_leaderboard.py  test_matches.py  test_operators.py  test_presence.py  test_rooms.py  test_rules_parity.py  test_session.py  test_session_log.py  test_spectator.py  test_static.py  test_stats.py  test_usage_stats.py  test_username_rules.py  test_users.py  test_version.py  test_ws_force_close.py
web/: index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
web/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
web/src/components/: AIPlayDialog.tsx  Board.tsx  BugReportDialog.tsx  BugReportLauncher.tsx  Chat.tsx  Clock.tsx  CreateRoomDialog.tsx  OnlineUsersPanel.tsx  OperatorBadge.tsx  ParticipantsPanel.tsx  RoomCard.tsx  SoundToggle.tsx  UpgradeBanner.tsx  UpgradeModal.tsx  UserHoverCard.tsx
web/src/hooks/: useGameSocket.ts  useLobbySocket.ts  useRoomSocket.ts  useVersionCheck.ts
web/src/lib/: api.ts  auth.tsx  boardMath.ts  fetcher.ts  operators.ts  sound.ts  utils.ts  version.ts  versionContext.tsx
web/src/routes/: Game.tsx  Home.tsx  Leaderboard.tsx  Lobby.tsx  Login.tsx  MatchReplay.tsx  Room.tsx  Stats.tsx  UserProfile.tsx
web/src/types/: protocol.ts
