[project]
name = "omok-server"
version = "1.6.3"
description = "OmokGosu FastAPI server: REST + WebSocket game host wrapping omok_core C++ engine"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.6",
    "websockets>=12.0",
    "sqlmodel>=0.0.16",
    "bcrypt>=4.0",
    "pyjwt>=2.8",
    # services.github_issues posts to the GitHub Issues API; httpx is the
    # async HTTP client. Production-required, not a dev-only extra.
    "httpx>=0.27",
]
# Note: `omok_core` (the C++ pybind11 module) is installed separately by
# scripts/bootstrap.ps1 via the top-level pyproject.toml. It's not on PyPI.

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["omok_server*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
